<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dlo3d</name>
  <version>0.0.0</version>
  <description>dlo3d (Direct LiDAR Odometry package based on Fast Truncated Distance
Field (FTDF) </description>
  <maintainer email="lcotele@upo.es">upo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and exec dependencies -->
  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> 
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>std_srvs</depend>
  <depend>PCL</depend>
  <depend>boost</depend>
  <depend>glog</depend>
  <depend>ceres-solver</depend>
  <depend>visualization_msgs</depend>


  <!-- System dependencies -->
  <exec_depend>libann-dev</exec_depend>
  <exec_depend>libgoogle-glog-dev</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
